@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright (C) 2008-2012, Luis Pedro Coelho <luis@luispedro.org>
+# Copyright (C) 2008-2013, Luis Pedro Coelho <luis@luispedro.org>
 # vim: set ts=4 sts=4 sw=4 expandtab smartindent:
 #
 # License: MIT. See COPYING.MIT file in the milk distribution
@@ -17,7 +17,7 @@ Unsupervised Learning
 
 from kmeans import kmeans,repeated_kmeans, select_best_kmeans
 from gaussianmixture import *
-from pca import pca, mds
+from pca import pca, mds, mds_dists
 import nnmf
 from nnmf import *
 from pdist import pdist, plike
@@ -27,7 +27,8 @@ from .normalise import zscore, center
 __all__ = [
     'center',
     'kmeans',
-    'mds'
+    'mds',
+    'mds_dists',
     'pca',
     'pdist',
     'plike',
